Fixed tiles, was just off of 48x48 tiles by about 4 pixels total for 15 tiles horizontally and vertically. Genericized movement of player sprite, added blocks so player cannot move out of bounds, into walls, or through obstacles. I feel most of the movement engine in general is done. Some tweaks and enemies should be movable, then comes health. Good night.

--- a/p5/empty-example/styles.css
+++ b/p5/empty-example/styles.css
@@ -24,14 +24,13 @@ body {
   border-bottom: solid 0px #500090;
   top: 120px;
   left: 360px;
-  height:192px;
 }
 
 #area {
   border-top: solid 0px var(--alt-color);
-  top: 312px;
+  top: 220px;
   left: 360px;
-  height: 528px;
+  height: 624px;
 }
 
 #exit {z-index: 2;}
